Sun Dec 26 04:31:15 2010  Luis Lavena  <luislavena@gmail.com>

	* ext/dl/win32/registry.rb: Corrected RegCreateKeyExA signature.
	  Patch by Rafal Michalski [ruby-core:33874] [Ruby 1.9-Bug#4203]

Sun Dec 26 02:31:58 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (advice_arg_check): Change argument check.
	  Now, an unsupported advice makes NotImplementedError.
	  [ruby-dev:42887] [Ruby 1.9-Feature#4204]

Sun Dec 26 03:00:53 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/socket/extconf.rb: Fix build error which was introduced r30372.

Sun Dec 26 01:37:10 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/extconf.rb: check the existence of if_indextoname().

	* ext/socket/option.c: yesterday's akr's commits destroyed the build of
	  some unrelated platforms (such as Windows).

Sat Dec 25 23:29:11 2010  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (inspect_ipv4_add_drop_membership): new function
	  to inspect struct ip_mreq and struct ip_mreqn for
	  IP_ADD_MEMBERSHIP and IP_DROP_MEMBERSHIP.
	  Socket::Option.new(:INET, :IP, :ADD_MEMBERSHIP,
	  [239,255,99,81, 0,0,0,0].pack("CCCCCCCC")).inspect is now
	  "#<Socket::Option: INET IP ADD_MEMBERSHIP 239.255.99.81 0.0.0.0>".
	  (inspect_ipv4_multicast_if): new function to inspect struct in_addr
	  and struct ip_mreqn for IP_MULTICAST_IF.
	  Socket::Option.new(:INET, :IP, :MULTICAST_IF,
	  [192,168,0,7].pack("CCCC")).inspect is now
	  "#<Socket::Option: INET IP MULTICAST_IF 192.168.0.7>".

	* ext/socket/extconf.rb: check struct ip_mreq and struct ip_mreqn.

Sat Dec 25 22:49:10 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/csv: DifferentOFS needs to be include in each classes.

	* test/digest/test_digest_extend.rb (TestDigestExtend#setup):
	  should not depend on the result of previous tests

	* test/with_different_ofs.rb (DifferentOFS::WithDifferentOFS): give
	  name.

	* test/with_different_ofs.rb (DifferentOFS): test suite for test
	  suites affected by $,.
