@@ -1,3 +1,13 @@
+Sun Dec 26 09:22:19 2010  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/option.c (rb_if_indextoname): new function to abstract
+	  environments without if_indextoname.
+	  (inspect_ipv6_multicast_if): new function to inspect
+	  IPV6_MULTICAST_IF.
+	  Socket::Option.new(:INET6, :IPV6, :MULTICAST_IF,
+	  [2].pack("I!")).inspect is
+	  "#<Socket::Option: INET6 IPV6 MULTICAST_IF eth0>".
+
 Sun Dec 26 04:31:15 2010  Luis Lavena  <luislavena@gmail.com>
 
 	* ext/dl/win32/registry.rb: Corrected RegCreateKeyExA signature.
